--- a/src/options/Options.css
+++ b/src/options/Options.css
@@ -18,15 +18,7 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Jira-Url {
+  width:500px;
+  margin-bottom:20px;
 }
