--- a/src/popup/index.css
+++ b/src/popup/index.css
@@ -1,15 +1,21 @@
 body {
   margin: 0;
   padding: 0;
+  font-size:14px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: url(/img/background.png), linear-gradient(90deg, #00331a, #002233);
+  /*background: rgb(255,255,255);*/
+  /*background: linear-gradient(7deg, rgba(255,255,255,1) 32%, rgba(237,237,237,1) 100%);*/
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+html {
+  scroll-behavior: smooth;
 }
