--- a/src/options/Options.css
+++ b/src/options/Options.css
@@ -1,5 +1,12 @@
 .App {
   text-align: center;
+  min-height: 100vh;
+  background-color: #282c34;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  color: white;
 }
 
 .App-logo {
@@ -8,17 +15,67 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  margin-bottom:20px;
 }
 
-.Jira-Url {
-  width:500px;
+.container {
+  width: 400px;
+  display:flex;
+  flex-direction: column;
+  font-size: 14px;
+}
+
+.form{
+
+}
+
+.form-row{
+  text-align: left;
   margin-bottom:20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.form-input {
+  margin-top:5px;
+  border-radius:3px;
+  padding:10px;
+  box-shadow: none;  border:1px solid #d0d0d0;
+}
+
+paper-button.save { background: rgb(0, 82, 204); color: white; font-size:15px; margin-top:20px;}
+paper-button.save-small { background: rgb(0, 82, 204); color: white; font-size:15px; margin-top:10px; width:50px; margin-left: 0;}
+
+
+.canary-names-wrapper{
+  border:1px solid #999;
+  border-radius: 3px;
+  min-height: 50px;
+  margin-bottom:0px;
+  padding:5px;
+}
+
+.canary-item {
+  display:flex;
+  flex-direction:row;
+  justify-content:space-between;
+  align-items:center;
+}
+
+.canary-item-name{
+  flex:.7;
+}
+
+.canary-item-actions{
+  flex:.3;
+  text-align: right;
+}
+
+.add-canary-name-button{
+  width:200px;
 }
