--- a/src/popup/Popup.css
+++ b/src/popup/Popup.css
@@ -2,6 +2,7 @@
   text-align: center;
   width: 700px;
   height:600px;
+  color: #2c2c2c;
 }
 
 .header {
@@ -16,6 +17,8 @@
 .title{
   font-weight:bold;
   text-transform:uppercase;
+  font-size: 25px;
+  color: rgb(0, 82, 204);
 }
 
 .title-icon {
@@ -65,29 +68,30 @@
   width:660px;
   margin:0px 0px 5px 0px;
   padding:5px;
-  border-radius:3px;
+  border-radius:5px;
   border:1px solid #d0d0d0;
   box-shadow: none;
-  font-size: 15px;
+  font-size: 14px;
 }
 
 .popup-label {
+
   display:block;
   width:660px;
   padding:5px;
   box-shadow: none;
-  font-size: 15px;
+  font-size: 14px;
   text-align:left;
   margin-left:12px;
   margin-top:5px;
 }
 
 
-paper-button.save { background: rgb(0, 82, 204); color: white; font-size:15px; margin-top: -5px;}
-paper-button.save-disabled { background: #e1e1e1; color: white; font-size:15px; margin-top: -5px;}
+paper-button.save { background: rgb(0, 82, 204); color: white; font-size:14px; margin-top: -5px; font-weight:bold;}
+paper-button.save-disabled { background: #e1e1e1; color: white; font-size:14px; margin-top: -5px; font-weight:bold;}
 
-paper-button.plain { background: white; color: rgb(0, 82, 204); border:1px solid rgb(0, 82, 204); font-size:15px; margin-top: -5px;}
-paper-button.plain-disabled { background: white; color: #e1e1e1; border:1px solid #e1e1e1; font-size:15px; margin-top: -5px;}
+paper-button.plain { background: white; color: rgb(0, 82, 204); border:1px solid rgb(0, 82, 204); font-size:14px; margin-top: -5px; font-weight:bold;}
+paper-button.plain-disabled { background: white; color: #e1e1e1; border:1px solid #e1e1e1; font-size:14px; margin-top: -5px; font-weight:bold;}
 
 paper-button.settings {
   color: rgb(0, 82, 204);
@@ -115,6 +119,7 @@ paper-button.settings {
   padding:10px 10px 10px 15px;
   cursor:pointer;
   align-items: center;
+  font-weight: bold;
 }
 
 .saved-item-selected {
@@ -126,6 +131,7 @@ paper-button.settings {
   cursor:pointer;
   align-items: center;
   background:#e9f4f9;
+
 }
 
 
@@ -159,9 +165,10 @@ paper-button.settings {
 .saved-items-delete {
   border:none;
   border-radius: 3px;
-  color: red;
+  color: rgb(0, 82, 204);
   cursor:pointer;
   background:none;
+  margin-top: -3px;
 }
 
 .canary-cookie-title-wrapper{
